Add julia and mandelbrot post

--- a/hugo.toml
+++ b/hugo.toml
@@ -21,7 +21,7 @@ minifyOutput = true
 env = "production"
 title = "Guilospanck's Notes"
 description = "Mental dump"
-keywords = ["Rust", "Go", "Stoicism", "Sovereignty", "Bitcoin"]
+keywords = ["Programming", "Philosophy", "Stoicism", "Sovereignty", "Bitcoin"]
 author = "Guilherme Pereira"
 DateFormat = "January 2, 2006"
 defaultTheme = "dark" # dark, light
